Implement #774